# tb4

./: .gitignore  README.md
demo/: README.md
tb4_baseline_python/: package.xml  setup.cfg  setup.py
tb4_baseline_python/conf/: standard.launch.py
tb4_baseline_python/tb4_baseline_python/: tb4_baseline_node.py
tb4_perception/: package.xml  setup.py
tb4_perception/config/: oakd_pro.yaml  readme.txt  yolo_detector.yaml
tb4_perception/launch/: yolo_detector.launch.py
tb4_perception/tb4_perception/: yolo_detector_node.py
tb4_perception/test/: test_pep257.py
tb4_perception_integration/: package.xml  setup.cfg  setup.py
tb4_perception_integration/config/: fusion_params.yaml
tb4_perception_integration/launch/: perception_integration.launch.py
tb4_perception_integration/tb4_perception_integration/: camera_lidar_fusion_node.py
tb4_perception_integration/test/: test_copyright.py  test_flake8.py  test_pep257.py
tb4_perception_layer/: CMakeLists.txt  package.xml
tb4_perception_layer/include/tb4_perception_layer/: is_stop_sign_nearby.hpp  perception_layer.hpp
tb4_perception_layer/msg/: SemanticObstacle.msg  SemanticObstacleArray.msg
tb4_perception_layer/plugins/: perception_layer_plugin.xml
tb4_perception_layer/src/: is_stop_sign_nearby.cpp  perception_layer.cpp
turtlebot4/turtlebot4_navigation/config/: bashrc  build-on-pi-note.txt  config_changes_03_26_a.md  design_view.txt  fastdds_nav2.xml  fastdds_rpi.xml  joy_linux.yaml  localization.yaml  nav2.yaml  nav2_config_change_03_25_a.md  navigate_to_pose_stop_sign.xml  research_design.tex  slam.yaml  tb4  tb4ctl  teleop_ps4.yaml  test_dds.sh
turtlebot4/turtlebot4_navigation/config/issues/: 2026-04-04.txt
turtlebot4/turtlebot4_navigation/config/logs/: docked-tb4-status.txt  undocked-tb4-status.txt
turtlebot4/turtlebot4_navigation/launch/: nav2.launch.py
turtlebot4/turtlebot4_node/include/turtlebot4_node/: turtlebot4.hpp
turtlebot4/turtlebot4_node/src/: turtlebot4.cpp
turtlebot4_cpp_tutorials/: CMakeLists.txt  package.xml
turtlebot4_cpp_tutorials/src/: turtlebot4_first_cpp_node.cpp
turtlebot4_desktop/turtlebot4_viz/rviz/: navigation.rviz  navigation_lite.rviz
turtlebot4_python_tutorials/: package.xml  setup.py
turtlebot4_python_tutorials/turtlebot4_python_tutorials/: turtlebot4_first_python_node.py
